--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
 	--secondary-accent-color: #f4f4fd;
 	--third-accent-color: #e7e9fc;
 	--icon-main-color: #8e8f99;
-	--footer-active-link:#31D0AA;
+	--footer-active-link: #31d0aa;
+	--modal-color: #fcfcfc;
 }
 
 body {
@@ -106,10 +107,11 @@ img {
 }
 
 .menu-link {
+	position: relative;
 	display: block;
 	padding-top: 24px;
 	padding-bottom: 24px;
-
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.5;
@@ -120,6 +122,21 @@ img {
 .menu-link:hover,
 .menu-link:focus {
 	color: var(--active-link-color);
+}
+
+.current {
+	color: var(--active-link-color);
+}
+.current::after {
+	content: "";
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 4px;
+	background: #404bbf;
+	border-radius: 2px;
+	bottom: -1px;
+	left: 0;
 }
 /* Contacts */
 
@@ -134,6 +151,7 @@ img {
 	display: block;
 	padding-top: 24px;
 	padding-bottom: 24px;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 	font-style: normal;
 	font-weight: 400;
@@ -178,6 +196,7 @@ img {
 .button.primary {
 	padding: 16px 32px;
 	min-width: 169px;
+	transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 	background: var(--accent-main-color);
 	cursor: pointer;
@@ -294,6 +313,7 @@ img {
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	background-color: var(--accent-main-color);
 }
 .social-list-link:hover,
@@ -319,6 +339,8 @@ img {
 	align-items: center;
 	width: 100%;
 	height: 100%;
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 	border: 1px solid var(--icon-main-color);
 	border-radius: 4px;
 }
@@ -331,6 +353,7 @@ img {
 
 .customers-list-icon {
 	fill: var(--icon-main-color);
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* -------Footer section -------- */
 .footer {
@@ -368,22 +391,23 @@ img {
 	display: flex;
 	gap: 16px;
 }
-.social-media-list-link{
+.social-media-list-link {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 	border-radius: 50%;
 	background: rgba(255, 255, 255, 0.1);
 	width: 40px;
 	height: 40px;
 }
-.social-media-list-link:is(:hover, :focus){
+.social-media-list-link:is(:hover, :focus) {
 	background-color: var(--footer-active-link);
 }
-.social-media-list-icon{
-	fill: var(--secondary-accent-color)
+.social-media-list-icon {
+	fill: var(--secondary-accent-color);
 }
-
 
 /* ----------------------------------- Portfolio INDEX ---------------------------------------- */
 .portfolio {
@@ -400,6 +424,8 @@ img {
 .btn-port {
 	display: block;
 	padding: 12px 24px;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		border 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 	font-family: inherit;
 	font-weight: 500;
@@ -422,6 +448,34 @@ img {
 	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.item-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	transform: translate(0, 100%);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	padding: 40px 32px;
+	background-color: rgba(77, 90, 229, 0.9);
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: #f4f4fd;
+}
+
+.img-list .item {
+	display: block;
+}
+.img-link:hover .item-overlay,
+.img-link:focus .item-overlay {
+	transform: translate(0, 0);
+}
+.img-list-wrapper {
+	position: relative;
+	overflow: hidden;
+}
 .img-descr {
 	padding: 32px 16px;
 	border: 1px solid var(--third-accent-color);
@@ -438,16 +492,71 @@ img {
 
 .img-list .item {
 	width: calc((100% - 48px) / 3);
+	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.img-list .item:hover{
+.img-list .item:hover {
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+/* ============ Modal Window ========== */
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	background: rgba(46, 47, 66, 0.4);
 
-/* ----- Altelraniv variant ------ */
-
-/* .img-list .item:not(:nth-child(3n)) {
-	margin-right: 24px;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.img-list .item:not(:nth-last-child(-n + 3)) {
-	margin-bottom: 48px;
-} */
+.backdrop.is-hidden{
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
+
+}
+.modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 408px;
+	height: 576px;
+	background-color: var(--modal-color);
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+}
+
+.modal-close-btn {
+	position: absolute;
+	top: 24px;
+	right: 24px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	width: 24px;
+	height: 24px;
+	border-radius: 50%;
+	background: var(--third-accent-color);
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+	padding: 0;
+	cursor: pointer;
+}
+.modal-close-btn:hover, 
+.modal-close-btn:focus{
+	background: #404BBF;
+	border: transparent;
+}
+
+.modal-close-btn-icon{
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.modal-close-btn:hover .modal-close-btn-icon, 
+.modal-close-btn:focus .modal-close-btn-icon{
+	fill: var(--main-color);
+}
+
+
